updated the styles and added logos

--- a/about.html
+++ b/about.html
@@ -274,33 +274,29 @@
                         class="grid lg:grid-cols-3 md:grid-cols-3 gap-2 flex items-center justify-center gap-x-6 p-2  ">
 
                         <div class="flex flex-col justify-start items-center ">
-                            <img src="./public/image/icon/volunteer.png" alt="Lack of understanding of"
+                            <img src="./public/image/icon/volunteer.png" alt=" members"
                                 class="icon-size h-20">
                             <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Volunteer</h3>
                             <p>
-                                Individuals can become members of our organisation, attend our programs, and contribute
-                                their valuable insights.
+                                Individuals can become members of our organisation, attend our programs, and contribute their valuable insights.
                             </p>
                         </div>
 
                         <div class="flex flex-col justify-start items-center">
-                            <img src="./public/image/icon/love.png" alt="Inability to
-                                exercise and enforce their right" class="icon-size h-20">
+                            <img src="./public/image/icon/love.png" alt="Awareness" class="icon-size h-20">
                             <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Spread
                                 Awareness</h3>
                             <p>
-                                Sharing our work on social platforms can help us reach a wider audience.
+                                Sharing our work across various social media platforms is a highly effective way to expand our audience's reach.
                             </p>
                         </div>
 
                         <div class="flex flex-col justify-start items-center">
-                            <img src="./public/image/icon/donation.png" alt="Failure of the state to deliver justice"
+                            <img src="./public/image/icon/logo-bg.png" alt="donation"
                                 class="icon-size h-20">
                             <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Donate</h3>
                             <p>
-                                Your financial support can further strengthen our initiatives to provide better
-                                resources and opportunities for the marginalised communities we serve. Together, we can
-                                create lasting change and uplift the lives of those in need. </p>
+                                Your support strengthens initiatives, providing for marginalized communities. Together, we create lasting change.. </p>
 
                         </div>
 
