--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
 
 	<!-- partners -->
-	<div class=" mx-auto p-8 text-center border-2 border-emerald-900 w-max my-16">
+	<div class=" mx-auto p-8 text-center border-2 border-emerald-900 w-4/5 my-16">
 		<h1 class="text-3xl font-bold mb-6">Our Partners</h1>
 		<div class="grid  lg:grid-cols-6 sm:grid-cols-3 gap-8 ">
 			<!-- Partner Logo 1 -->
@@ -413,25 +413,31 @@
 			</div>
 
 
+			
+
 			<!-- Partner Logo 3 -->
-			<div class="bg-white p-4 shadow-md">
-				<img src="partner1-logo.png" alt="Partner 1 Logo" class="mx-auto h-28" />
+			<div>
+				<div class="bg-white p-4 shadow-md">
+					<img src="./public/image/patner logo/Vikas Samvad Samiti.jpeg" alt="Partner 3 Logo" class="mx-auto h-28" />
+				</div>
+				<p class="pt-2">Vikas Samvad Samiti</p>
 			</div>
 
 			<!-- Partner Logo 4 -->
-			<div class="bg-white p-4 shadow-md">
-				<img src="partner2-logo.png" alt="Partner 2 Logo" class="mx-auto h-28" />
+			<div class="">
+				<div class="bg-white p-4 shadow-md">
+					<img src="./public/image/patner logo/Child Rights Observatory.jpeg" alt="Partner 4 Logo" class="mx-auto h-28" />
+					
+				</div>
+				<p class="pt-2">Child Rights Observatory</p>
 			</div>
-
-
 			<!-- Partner Logo 5 -->
 			<div class="bg-white p-4 shadow-md">
-				<img src="partner1-logo.png" alt="Partner 1 Logo" class="mx-auto h-28" />
+				<img src="partner2-logo.png" alt="Partner 5 Logo" class="mx-auto h-28" />
 			</div>
-
 			<!-- Partner Logo 6 -->
 			<div class="bg-white p-4 shadow-md">
-				<img src="partner2-logo.png" alt="Partner 2 Logo" class="mx-auto h-28" />
+				<img src="partner2-logo.png" alt="Partner 6 Logo" class="mx-auto h-28" />
 			</div>
 
 		</div>
