--- a/index.html
+++ b/index.html
@@ -408,8 +408,13 @@
 			</div>
 
 			<!-- Partner Logo 2 -->
-			<div class="bg-white p-4 shadow-md">
-				<img src="partner2-logo.png" alt="Partner 2 Logo" class="mx-auto h-28" />
+			<div>
+
+				<div class="bg-white p-4 shadow-md">
+					<img src="./public/image/patner logo/Hifajat network bhopal.jpeg" alt="Partner 2 Logo" class="mx-auto h-28" />
+				</div>
+				<p class="pt-2">Hifajat network bhopal</p>
+
 			</div>
 
 
