--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<section>
 		<div class="container mx-auto lg:px-6 px-6 lg:py-12 py-4 bg-gray-50 text-gray-800  lg:text-left  mt-4 lg:mt-0">
 			<div class="mt-12 lg:mt-0 ">
-				<h1 class="lg:text-4xl font-bold capitalize text-lg pb-4 lg:px-12 text-center">
+				<h1 class="lg:text-4xl font-bold capitalize text-lg pb-4 lg:px-12 text-center sm:text-2xl">
 					Empowering Lives, Transforming Communities
 				</h1>
 
@@ -365,7 +365,6 @@
 
 				<!-- div-6 -->
 				<div class="relative block  h-full bg-gray-900 group">
-					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
 					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
 						src="public/image/समाधान आपके द्वारा योजना अंतर्गत विधिक सेवा प्राधिकरण के साथ लगाई गई लोक अदालत.jpg" />
 					<div class="relative ">
@@ -401,19 +400,16 @@
 	<!-- partners -->
 	<div class=" mx-auto p-8 text-center border-2 border-emerald-900 w-4/5 my-16">
 		<h1 class="text-3xl font-bold mb-6">Our Partners</h1>
-		<div class="grid  lg:grid-cols-6 sm:grid-cols-3 gap-8 ">
+		<div class="grid  lg:grid-cols-3 sm:grid-cols-3 gap-8 ">
 			<!-- Partner Logo 1 -->
-			<div class="bg-white p-4 shadow-md">
-				<img src="partner1-logo.png" alt="Partner 1 Logo" class="mx-auto h-28" />
-			</div>
-
+		
 			<!-- Partner Logo 2 -->
 			<div>
 
 				<div class="bg-white p-4 shadow-md">
 					<img src="./public/image/patner logo/Hifajat network bhopal.jpeg" alt="Partner 2 Logo" class="mx-auto h-28" />
 				</div>
-				<p class="pt-2">Hifajat network bhopal</p>
+				<p class="pt-2">Hifajat Network Bhopal</p>
 
 			</div>
 
@@ -436,15 +432,7 @@
 				</div>
 				<p class="pt-2">Child Rights Observatory</p>
 			</div>
-			<!-- Partner Logo 5 -->
-			<div class="bg-white p-4 shadow-md">
-				<img src="partner2-logo.png" alt="Partner 5 Logo" class="mx-auto h-28" />
-			</div>
-			<!-- Partner Logo 6 -->
-			<div class="bg-white p-4 shadow-md">
-				<img src="partner2-logo.png" alt="Partner 6 Logo" class="mx-auto h-28" />
-			</div>
-
+			
 		</div>
 	</div>
 	<!-- partners end -->
@@ -462,7 +450,7 @@
 					<div class="mt-2 xl:mt-0 max-w-xl">
 						<h3 class="text-lg font-semibold leading-6 text-black">Address</h3>
 						<p class="mt-2 text-baseleading-6 text-black font-family-class">Near to Police Chauki Bus Stand,
-							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
+							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482056
 
 						</p>
 
