--- a/new-gallery.html
+++ b/new-gallery.html
@@ -276,18 +276,6 @@
                                                 group-hover:opacity-100
                                                 group-hover:translate-x-2">
 
-                                <!-- <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-center">
-                                        Health Education
-                                    </p>
-
-                                    <button class="px-4 py-2 text-sm
-                                                            text-white bg-red-800">
-                                        <a href="Gallery/Health-Education.html"> See More</a>
-                                    </button>
-
-                                </div> -->
-
                                 <div class="py-12 ">
                                     <p class="text-lg text-white py-6 text-center">
                                         Health Education
@@ -323,20 +311,9 @@
                                                 group-hover:opacity-100
                                                 group-hover:translate-x-2">
 
-                                <!-- <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-center">
-                                        EcoRestoration
-                                    </p>
-                                    <button class="px-4 py-2 text-sm
-                                                            text-white bg-red-800">
-                                        <a href="Gallery/EcoRestoration.html"> See More</a>
-                                    </button>
-                                </div> -->
-
-
                                 <div class="py-12 ">
                                     <p class="text-lg text-white py-6 text-center">
-                                        EcoRestoration
+                                        EnvRestoration
                                     </p>
 
                                     <div class="flex justify-center">
@@ -459,7 +436,7 @@
                     <div class="mt-2 xl:mt-0 max-w-xl">
                         <h3 class="text-lg font-semibold leading-6 text-black">Address</h3>
                         <p class="mt-2 text-baseleading-6 text-black font-family-class">Near to Police Chauki Bus Stand,
-                            Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
+                            Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482056
                         </p>
 
                     </div>
