--- a/team.html
+++ b/team.html
@@ -100,14 +100,14 @@
 							Parwez Khan
 						</h1>
 						<h4 class="text-second text-center">
-							Secretary
+							Director and Founder
 						</h4>
 					</button>
 
 					<dialog id="my_modal_1" class="modal bg-zinc-50 text-black p-6 max-w-2xl ">
 						<div class="modal-box ">
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Parwez Khan</h3>
+								<h3 class="font-bold text-2xl">Parwez Khan</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -175,7 +175,7 @@
 						<div class="modal-box">
 							<!-- <h3 class="font-bold text-lg">Neha Sharma</h3> -->
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Neha Sharma</h3>
+								<h3 class="font-bold text-2xl">Neha Sharma</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -241,7 +241,7 @@
 							<!-- <h3 class="font-bold text-lg">Razia Mansoori</h3> -->
 
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Razia Mansoori</h3>
+								<h3 class="font-bold text-2xl">Razia Mansoori</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -299,7 +299,7 @@
 						<div class="modal-box">
 							<!-- <h3 class="font-bold text-lg">Hello!</h3> -->
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Anil raikwar</h3>
+								<h3 class="font-bold text-2xl">Anil raikwar</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -342,7 +342,7 @@
 							<!-- <h3 class="font-bold text-lg">Navin Shiva</h3> -->
 
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Navin Shiva</h3>
+								<h3 class="font-bold text-2xl">Navin Shiva</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -417,7 +417,7 @@
 							<!-- <h3 class="font-bold text-lg">Hello!</h3> -->
 
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Dayal Chand Yadav</h3>
+								<h3 class="font-bold text-2xl">Dayal Chand Yadav</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -467,7 +467,7 @@
 						<div class="modal-box">
 							<!-- <h3 class="font-bold text-lg">Nikhilesh Dubey</h3> -->
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Nikhilesh Dubey</h3>
+								<h3 class="font-bold text-2xl">Nikhilesh Dubey</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -531,7 +531,7 @@
 						<div class="modal-box">
 							<!-- <h3 class="font-bold text-lg">Premalata Chakravarti</h3> -->
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Premalata Chakravarti</h3>
+								<h3 class="font-bold text-2xl">Premalata Chakravarti</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -590,7 +590,7 @@
 							<!-- <h3 class="font-bold text-lg">Parvati Jhariya</h3> -->
 
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Parvati Jhariya</h3>
+								<h3 class="font-bold text-2xl">Parvati Jhariya</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -651,7 +651,7 @@
 							<!-- <h3 class="font-bold text-lg">Amit Das Parwar</h3> -->
 
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Amit Das Parwar</h3>
+								<h3 class="font-bold text-2xl">Amit Das Parwar</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -706,7 +706,7 @@
 						<div class="modal-box">
 							<!-- <h3 class="font-bold text-lg">Satyendra Jhariya</h3> -->
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Satyendra Jhariya</h3>
+								<h3 class="font-bold text-2xl">Satyendra Jhariya</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -756,7 +756,7 @@
 							<!-- <h3 class="font-bold text-lg">Hello!</h3> -->
 
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Firoz Khan</h3>
+								<h3 class="font-bold text-2xl">Firoz Khan</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -806,7 +806,7 @@
 
 							<!-- <h3 class="font-bold text-lg">Najiya Sultana</h3> -->
 							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Najiya Sultana</h3>
+								<h3 class="font-bold text-2xl">Najiya Sultana</h3>
 
 								<div class="modal-action text-center">
 									<form method="dialog">
@@ -856,7 +856,7 @@
 					<div class="mt-2 xl:mt-0 max-w-xl">
 						<h3 class="text-lg font-semibold leading-6 text-black">Address</h3>
 						<p class="mt-2 text-baseleading-6 text-black font-family-class">Near to Police Chauki Bus Stand,
-							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
+							Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482056
 
 							<!-- <a href="donate.html" class="donate-color hover:text-white hover:underline">Donate
                                 online.</a> -->
