--- a/contact.html
+++ b/contact.html
@@ -121,21 +121,21 @@
             <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
                 <div>
                     <label for="first-name" class="block text-sm font-semibold leading-6 text-gray-900">First
-                        name</label>
+                        Name</label>
                     <div class="mt-2.5">
                         <input type="text" name="first-name" id="first-name" autocomplete="given-name"
                             class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
                 </div>
                 <div>
-                    <label for="last-name" class="block text-sm font-semibold leading-6 text-gray-900">Last name</label>
+                    <label for="last-name" class="block text-sm font-semibold leading-6 text-gray-900">Last Name</label>
                     <div class="mt-2.5">
                         <input type="text" name="last-name" id="last-name" autocomplete="family-name"
                             class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
                 </div>
                 <div class="sm:col-span-2">
-                    <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Company</label>
+                    <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Organisation</label>
                     <div class="mt-2.5">
                         <input type="text" name="company" id="company" autocomplete="organization"
                             class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
@@ -183,7 +183,7 @@
                     <div class="mt-2 xl:mt-0 max-w-xl">
                         <h3 class="text-lg font-semibold leading-6 text-black">Address</h3>
                         <p class="mt-2 text-baseleading-6 text-black font-family-class">Near to Police Chauki Bus Stand,
-                            Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482001
+                            Gram Panchayat Harduli Bargi Nagar, district Jabalpur, Pin code – 482056
 
                         </p>
 
