--- a/donate.html
+++ b/donate.html
@@ -116,22 +116,27 @@
 
 
     <!-- Account Details -->
-    <!-- <div class="flex justify-center py-12  ">
+    <div class="flex justify-center py-12  ">
 		<div class=" p-6">
 			<div>
 				<h1 class="font-bold pb-4 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Donation Account
 					Details
 				</h1>
 
-				<h3>Account Holder Name : Sachcha Prayas Ek Abhiyan Samajsevi Sanstha</h3>
+				<h3>Account Holder Name : Sachcha  Prayas Ek Abhiyan Samiti</h3>
 				<h3>Account Number : 311 70 922 463</h3>
 				<h3>IFSC Code : SBIN0005863</h3>
 				<h3>CIF Number : 85787949529</h3>
 				<h3>Bank Name : State Bank of India</h3>
 				<h3>Branch : Bargi Nagar</h3>
+                <h3>District : Jabalpur</h3>
+                <h3>State : Madhya Pradesh</h3>
+
+
+
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 
 
