--- a/index.html
+++ b/index.html
@@ -88,43 +88,20 @@
 				</h1>
 
 				<p class="text-center font-semibold lg:w-1/2 w-4/5 mx-auto p-8"><i>
-						We often forget that the much-sought after development is often intertwined with the destruction
-						of
-						the earth and the lives that depend on the ecosystem.</i>
+					We often forget that the much sought-after development is often intertwined with the destruction of the planet and the lives that depend on it.</i>
 				</p>
 				<p class="mx-auto text-justify mb-6 lg:px-12  ">
-					The story of our organisation, Sachcha Prayas Sanstha is one that is rooted in the wide-spread
-					displacement caused by the construction of the Bargi dam in Jabalpur, Maharashtra. People from over
-					184 villages were uprooted and displaced, causing a loss of homes and livelihood.
-
-					Our founder, Parvez Khan’s family is one such family that were displaced and put through the turmoil
-					of rebuilding their lives in the name of development. Drawing inspiration from the thousands of
-					affected families, including his own, Parvez committed his life to empower marginalised communities.
-					This paired with his years of journalistic pursuits in the area, highlighting the struggles of the
-					rural people, paved the foundation for the organisation.
-
-					This collective experience ultimately led to the establishment of Sachcha Prayas Sanstha in
-					collaboration with Neha Sharma, a fashion designer. On November 17th, 2009, our NGO was officially
-					established under the Society Act.
-
-					Our journey began in Harduli-Mankhedi (Harduli-Bargi Gram Panchayat), Jabalpur district, Madhya
-					Pradesh. This area witnessed significant displacement of marginalised communities due to the Bargi
-					Dam construction. In the beginning, our main goal was to empower rural women, especially those in
-					distress, through skill-building, that could help them live dignified and financially independent
-					lives. These women often face challenges and are denied basic rights, even though they shoulder most
-					of the responsibilities of their households and farms. Currently, we have expanded our
-					organisation's capabilities to simultaneously focus on child rights, education, legal aid and
-					health.
-
-					We understand that empowerment goes beyond words – it's about skills that translate into
-					self-reliance. Our focus has been to empower women with skills such as machine tailoring, hand
-					embroidery, mehndi art, and beauty parlour techniques. By providing these comprehensive skill-set
-					training along with encouraging traditional forms occupations, we enable women to contribute to
-					their households and communities positively.
-
-					Our core purpose is to create a better future for those often left behind, particularly rural women
-					and children. Our biggest aspiration is to empower displaced families, adivasis, SC, ST, and
-					backward-class individuals by providing them with valuable skills sets and opportunities.
+					<p class="pb-2.5">
+						We aim to create a better future for those often left behind, particularly rural women and children. Our primary focus has always been to empower rural women, especially those from the marginalised section. We provide comprehensive skill-set training (e.g. tailoring, embroidery, etc.) to foster long-term self-reliance and economic security. Over the years, we have expanded our capabilities to focus on child rights, education, legal aid, and health. 
+					</p>
+						<p class="pb-2.5">
+							Women in our society are often denied basic rights despite the majority of them shouldering the responsibilities of their households and farms. With our programmes, we hope to make a lasting change to this inequitable structure.
+	Four out of the 10 women who joined our first tailoring programme made it their profession, going from zero income to earning ₹500-800 per month. In subsequent years, we started training more women, with 30-40 trainees in each batch. Over time, women from later batches also saved up and bought sewing machines, boosting their monthly income to ₹2,000-₹3,000.
+						</p>
+					</span>
+					<p >
+						Their success has motivated more women in the Harduli Bargi region to join our livelihood training programmes. Today, all the women who have completed the training contribute to their families' income. Even though the sewing training programme started in Mankhedi and Haraduli, now there is an increased enrollment of women and young girls from nearby villages like Sahajpuri, Para, Chaurai, Reema, Gulla Path, Gram Gaaganda, Tuniya, Saliwada, Bijora, Gram Magradha, Gram Binja and Gram Nai Basti.
+					</p>
 
 				</p>
 			</div>
@@ -144,10 +121,7 @@
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Mission
 						</p>
 					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Our mission is to empower marginalised
-						segments of society, especially women and children in Harduli Bargi region. We are dedicated to
-						equipping them to lead dignified lives by providing access to knowledge, information and
-						opportunities.
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Our mission is to empower marginalised segments of society, especially women and children in the Harduli Bargi region. We are dedicated to equipping them to lead dignified lives by providing access to knowledge, information and opportunities.
 					</dd>
 				</div>
 
@@ -161,8 +135,8 @@
 						</p>
 					</dt>
 					<dd class="mt-2 text-justify leading-7 text-gray-700 ">
-						We envision a society where every marginalised individual experiences a life of dignity,
-						enjoying equitable access to essential services encompassing health, education, and basic needs.
+						We envision a society where every marginalised individual experiences a life of dignity, enjoying equitable access to essential services encompassing health, education, and basic needs.
+
 
 
 					</dd>
@@ -178,9 +152,7 @@
 						</p>
 					</dt>
 					<dd class="mt-2 text-justify leading-7 text-gray-700 ">
-						Our ultimate goal is to nurture a sense of environmental security, enhance overall health, and
-						promote legal and skill-based literacy among women and children. Through these endeavours, we
-						aim to contribute to the creation of a community that is both sustainable and empowered.
+						Our ultimate goal is to nurture a sense of environmental security, enhance overall health, and promote legal and skill-based literacy among women and children. Through these endeavours, we aim to contribute to the creation of a community that is both sustainable and empowered.
 
 					</dd>
 				</div>
@@ -200,10 +172,8 @@
 			<h1 class="font-bold text-3xl">Support Us</h1>
 			<dl class="grid  grid-cols-1 gap-x-4 gap-y-6   md:grid-cols-2 lg:grid-cols-2">
 				<div class="">
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">If you're interested in joining our efforts
-						or learning more about our work, feel free to reach out to us. You can attend our programs,
-						participate in discussions, and contribute your ideas to our cause. Together, we can make a
-						positive impact and create a better future for marginalised communities.
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Do feel free to reach out to us if you would like to contribute to our efforts or learn more about our work. You can attend our programmes, participate in discussions, and contribute your ideas to our cause. Together, we can create a better future for marginalised communities.
+
 
 					</dd>
 				</div>
