--- a/our-work.html
+++ b/our-work.html
@@ -123,12 +123,8 @@
 						</h1>
 
 						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
-							We began our journey with a focus on improving the lives of rural women. We aim to provide
-							women with income-generating skills through courses in sewing, embroidery, and beautician
-							skills. Over time, we partnered with various organisations, including the Women and Child
-							Development Department and YMCA Sanstha Jabalpur, to enhance the livelihoods of women in the
-							community. Our efforts have enabled women to become financially independent and contribute
-							to their households' economic well-being.
+							We began our journey with a focus on improving the lives of rural women. We aim to provide women with income-generating skills through courses in sewing, embroidery, and beautician training. Over time, we have partnered with various organisations, including the Women and Child Development Department and YMCA Sanstha Jabalpur, to enhance the livelihoods of women in the community. Our efforts have enabled women to become financially independent and contribute to their households' economic well-being.
+
 
 						</p>
 					</div>
@@ -161,19 +157,9 @@
 						</h1>
 
 						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
-							Sachcha Prayas Sanstha recognises the importance of child rights advocacy. We strive to
-							create a positive atmosphere for child rights discussions at the Gram Panchayat level. Our
-							organisation collaborates with various government and non-government entities, such as the
-							Madhya Pradesh State Legal Services Authority, Child Rights Observatory Madhya Pradesh
-							Bhopal, and Vikas Samvad Samiti Bhopal, to ensure the protection and promotion of children's
-							rights. By working at the grassroots level and engaging with communities, we aim to address
-							the unique challenges faced by children in our areas of operation. By working together, we
-							aim to create sustainable change in the lives of marginalised communities.
-
+							Sachcha Prayas Sanstha recognises the importance of child rights advocacy. We strive to create a positive atmosphere for child rights discussions at the gram panchayat level. Our organisation collaborates with various government and non-government entities, such as the Madhya Pradesh State Legal Services Authority, Child Rights Observatory Madhya Pradesh Bhopal, and Vikas Samvad Samiti Bhopal, to ensure the protection and promotion of children's rights. By working at the grassroots level and engaging with communities, we aim to address the unique challenges faced by children in our areas of operation. By working together, we aim to create sustainable change in the lives of marginalised communities.
 						</p>
 					</div>
-
-
 				</div>
 			</div>
 		</div>
@@ -190,15 +176,11 @@
 						</h1>
 
 						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-							Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.
+							We conduct health awareness campaigns, prioritising the well-being of women, children, pregnant and lactating mothers, and adolescent girls across five gram panchayats: Magardha, Khamkheda, Saliwada, Binja, and Mothar. A significant concern is child malnutrition, particularly among children under 5 years of age. We closely collaborate with project officers, supervisors, and Anganwadi workers, working to improve child and maternal health.
+						</p>
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
+							We have organised health camps for malnourished children, distributing essential supplies and assessing maternal and child health. We address issues like delayed immunisations due to a lack of health workers and maintain immunisation schedules. Village health centres provide medicines and maintain records. Regular awareness sessions cover personal hygiene, diet, and health check-ups for pregnant women. We also connect people to government schemes such as the Maternity Benefit Scheme, Janani Suraksha Yojana, etc.
+
 						</p>
 					</div>
 
@@ -228,15 +210,12 @@
 						</h1>
 
 						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-							Fugiat eius aut dolorem quas
-							consectetur laborum maxime ex iusto. Possimus libero accusamus officiis sed animi mollitia,
-							hic officia nostrum veniam placeat.
+							Our organisation's journey in legal aid began when our volunteers were appointed as para-legal volunteers by the district legal services authority of Jabalpur. Impressed by their work, the authorities sought our help in appointing more para-legal volunteers in the region. We deployed 20 para-legal volunteers in 10 gram panchayats around Jabalpur to address public interest issues, and together, we successfully resolved these matters in collaboration with the district legal services authority. We also conducted legal literacy camps in rural areas, providing information on government schemes, in partnership with the district legal services authority.
+
+						</p>
+						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
+							Recognizing our efforts, the district authority established a Village Legal Aid Centre within our organisation and a legal aid clinic in Mankhedi village. These centres processed over 500 applications, resolving approximately 400 cases involving gram panchayat disputes, minor conflicts, and various government schemes. Our para-legal volunteers have represented rural communities at the Collector's public hearing, and our organisation has received departmental recognition from the Madhya Pradesh State Legal Services Authority.
+
 						</p>
 					</div>
 
@@ -245,7 +224,7 @@
 		</div>
 
 		<!-- div-5 -->
-		<div class="px-6 lg:py-12 py-4 header-color text-gray-800 text-center lg:text-left lg:my-5">
+		<!-- <div class="px-6 lg:py-12 py-4 header-color text-gray-800 text-center lg:text-left lg:my-5">
 			<div class="container mx-auto xl:px-8">
 				<div class="grid lg:grid-cols-2 lg:gap-20 gap-8 flex items-center justify-center">
 
@@ -273,7 +252,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 	</div>
 	<!-- div end -->
