--- a/about.html
+++ b/about.html
@@ -122,13 +122,21 @@
             <h1 class="lg:text-4xl font-bold capitalize text-lg pb-4 px-12 text-center">
                 Our Story
             </h1>
-            <p class="mx-auto text-justify text-base mb-6  lg:px-12">
-                Sachcha Prayas Sanstha's journey traces back to the idea of providing tailoring training in Gram
-                Panchayat Harduli Bargi Nagar during 2007-2008. Officially registered under the Society Act on
-                November 17, 2009, our organisation embarked on its mission with a steadfast commitment despite
-                initial resource limitations.
+            <div class="mx-auto text-justify text-base mb-6  lg:px-12">
 
-            </p>
+                <p class="mx-auto text-justify text-base  ">
+                    Sachcha Prayas Sanstha can trace its roots back to 2007-08, when it began a programme for  tailoring training for women in Harduli Bargi Nagar gram panchayat. Our NGO was officially established under the Society Act on November 17, 2009.
+                </p>
+                <p class="mx-auto text-justify text-base  ">
+                The story of our organisation is rooted in the widespread displacement caused by the construction of the Bargi dam in Jabalpur, Madhya Pradesh. People from over 184 villages were uprooted from their homes.  
+                </p>
+                <p class="mx-auto text-justify text-base  ">
+                    Our founder, Parvez Khan’s family, was among those who faced the turmoil of rebuilding their lives. Drawing inspiration from thousands of affected families, including his own, Parvez committed his life to empowering marginalised communities. His efforts led to the founding of SPs with Neha Sharma, a fashion designer. 
+                </p>
+                <p class="mx-auto text-justify text-base  " >
+                    Since the inception of SPS, our focus has been on the Harduli Bargi Nagar region due to the substantial presence of vulnerable communities affected by the Bargi dam construction. 
+                </p>
+            </div>
         </div>
 </section>
 <!-- end out mission -->
@@ -178,27 +186,12 @@
     </div>
     <div class="dropdown-content hidden">
         <p class="text-gray-700"> <p class="text-gray-700">
-            Our humble origins never deterred us from dreaming big and creating more pathways for impact. 
-
+            Our humble origins never deterred us from dreaming big and creating more pathways for impact. We kick-started our livelihood initiative with a batch of 10 women. Currently, each batch has 30-40 participants. Inspired by our dedication, social workers from in and around the Gargi region rallied together and donated an old sewing machine and seating facilities. Further Smt. Usha Vinodia and the officers of the Gargi Women and Child Development Department donated furniture and sewing machines.
             </p>
             <p class="text-gray-700">
-                Despite initial scepticism and lack of interest, we kick-started our livelihood initiative with a batch of 10 women. During this period, we encountered challenges such as the absence of proper guidance, economic resources, and basic infrastructure.
-            </p>
-            <p class="text-gray-700">
-                We also realised that the free training garnered limited interest due to the widespread notion that free programmes offered no value. We introduced a nominal registration fee, which increased the participation rate in the programme. Currently, each batch has 30-40 participants. 
-
-            </p>
-            <p class="text-gray-700">
-                The support from other organisations and the community helped SPS overcome initial hurdles. Inspired by our dedication, social workers from in and around the Gargi region rallied together and donated an old sewing machine and seating facilities in the Anganwadi centre. Further Smt. Usha Vinodia and the officers of the Gargi Women and Child Development Department donated furniture and sewing machines. 
-
-            </p>
-            <p class="text-gray-700">
-                As SPS’s work garnered more interest and visibility, we approached the Bargi Dam Irrigation Department authorities to build a centre to facilitate the livelihood programme. After a year of bureaucratic hurdles and other challenges, the authorities allocated a spacious hall on a monthly rental basis. The hall lacked basic amenities such as an electricity connection and furniture. Social workers in the region rallied together and raised financial aid through crowdfunding. This fund was used to set up the office and the livelihood training centre. 
-
-            </p>
-            <p class="text-gray-700">
+                We approached the Bargi Dam Irrigation Department authorities to build a centre to facilitate the livelihood programme. The authorities allocated a spacious hall on a monthly rental basis. Social workers in the region rallied together and raised financial aid through crowdfunding to set up the office and the livelihood training centre. 
                 Over the years, the organisation has grown and diversified its offerings to include a range of social welfare programmes (rural panchayat initiatives, legal aid, etc.). 
-            </p>
+                
             </p>
     </div>
 </div>
@@ -307,6 +300,7 @@
                             <p>
                                 Individuals can become members of our organisation, attend our programmes, and
                                 contribute their valuable insights. 
+ 
                                                             </p>
                         </div>
 
@@ -315,8 +309,7 @@
                             <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Spread
                                 Awareness</h3>
                             <p>
-                                Sharing stories about our work on social platforms can help us reach a wider audience.
-                            </p>
+                                Sharing stories about our work on social platforms can help us reach a wider audience.                            </p>
                         </div>
 
                         <div class="flex flex-col justify-start items-center">
@@ -324,8 +317,7 @@
                                 class="icon-size h-20">
                             <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Donate</h3>
                             <p>
-                                Your financial support can further strengthen our initiatives to provide better resources and opportunities for the marginalised communities we serve. Together, we can create lasting change and uplift the lives of those in need.
-
+                                Your financial support can further strengthen our initiatives. Together, we can create lasting change.
                         </div>
 
                     </div>
