--- a/our-work.html
+++ b/our-work.html
@@ -176,10 +176,9 @@
 						</h1>
 
 						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
-							We conduct health awareness campaigns, prioritising the well-being of women, children, pregnant and lactating mothers, and adolescent girls across five gram panchayats: Magardha, Khamkheda, Saliwada, Binja, and Mothar. A significant concern is child malnutrition, particularly among children under 5 years of age. We closely collaborate with project officers, supervisors, and Anganwadi workers, working to improve child and maternal health.
-						</p>
-						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
-							We have organised health camps for malnourished children, distributing essential supplies and assessing maternal and child health. We address issues like delayed immunisations due to a lack of health workers and maintain immunisation schedules. Village health centres provide medicines and maintain records. Regular awareness sessions cover personal hygiene, diet, and health check-ups for pregnant women. We also connect people to government schemes such as the Maternity Benefit Scheme, Janani Suraksha Yojana, etc.
+							We conduct health awareness campaigns, prioritising the well-being of women, children, pregnant and lactating mothers, and adolescent girls across five gram panchayats: Magardha, Khamkheda, Saliwada, Binja, and Mothar. A significant concern is child malnutrition, particularly among children under 5 years of age. 
+							<p class="max-w-2xl font-medium text-justify lg:text-lg ">
+								We have organised health camps for malnourished children, distributing essential supplies and assessing maternal and child health. We address issues like delayed immunisations due to a lack of health workers and maintain immunisation schedules. Regular awareness sessions cover personal hygiene, diet, and health check-ups for pregnant women. We also connect people to government schemes such as the Maternity Benefit Scheme, Janani Suraksha Yojana, etc.
 
 						</p>
 					</div>
@@ -210,11 +209,12 @@
 						</h1>
 
 						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
-							Our organisation's journey in legal aid began when our volunteers were appointed as para-legal volunteers by the district legal services authority of Jabalpur. Impressed by their work, the authorities sought our help in appointing more para-legal volunteers in the region. We deployed 20 para-legal volunteers in 10 gram panchayats around Jabalpur to address public interest issues, and together, we successfully resolved these matters in collaboration with the district legal services authority. We also conducted legal literacy camps in rural areas, providing information on government schemes, in partnership with the district legal services authority.
+							Our organisation's journey in legal aid began when our volunteers were appointed as para-legal volunteers by the district legal services authority of Jabalpur. Buoyed by the district authority's response, we deployed 20 para-legal volunteers in 10 gram panchayats around Jabalpur. We also conducted legal literacy camps in rural areas.
+The district authority established a Village Legal Aid Centre within our organisation and a legal aid clinic in Mankhedi village. These centres have processed over 500 applications, resolving approximately 400 cases involving gram panchayat disputes, minor conflicts, and various government schemes. Our para-legal volunteers have represented rural communities at the Collector's public hearing, and our organisation has received departmental recognition from the Madhya Pradesh State Legal Services Authority.
 
 						</p>
 						<p class="max-w-2xl font-medium text-justify lg:text-lg  p-2">
-							Recognizing our efforts, the district authority established a Village Legal Aid Centre within our organisation and a legal aid clinic in Mankhedi village. These centres processed over 500 applications, resolving approximately 400 cases involving gram panchayat disputes, minor conflicts, and various government schemes. Our para-legal volunteers have represented rural communities at the Collector's public hearing, and our organisation has received departmental recognition from the Madhya Pradesh State Legal Services Authority.
+							<!-- Recognizing our efforts, the district authority established a Village Legal Aid Centre within our organisation and a legal aid clinic in Mankhedi village. These centres processed over 500 applications, resolving approximately 400 cases involving gram panchayat disputes, minor conflicts, and various government schemes. Our para-legal volunteers have represented rural communities at the Collector's public hearing, and our organisation has received departmental recognition from the Madhya Pradesh State Legal Services Authority. -->
 
 						</p>
 					</div>
